--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,8 +27,9 @@
 
     </section>
     <section class="clearMsg">
-      <p>Clear all completed</p>
+      <p class="clrCompleted">Clear all completed</p>
     </section>
   </main>
 </body>
+
 </html>
