--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
-<script defer src="index.js"></script></head>
+</head>
 <body>
     <div class="to-do-container">
     <div class="title">Today's To Do <img src="#" alt="refresh icon"></div>
